cabal-version: 2.2

author: Mitchell Rosen, Travis Staton
bug-reports: https://github.com/awkward-squad/queue/issues
category: Data
copyright: Copyright (C) 2023 Mitchell Rosen, Travis Staton
homepage: https://github.com/awkward-squad/queue
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: queue
stability: experimental
synopsis: A queue
tested-with: GHC == 9.2.8, GHC == 9.4.7, GHC == 9.6.3
version: 0.1.0

description:
  A queue and deque data structure, as described in
  .
    * Okasaki, Chris. "Simple and efficient purely functional queues and deques." /Journal of functional programming/ 5.4 (1995): 583-592.
    * Okasaki, Chris. /Purely Functional Data Structures/. Diss. Princeton University, 1996.
  .
  These data structures support \(\mathcal{O}(1)\) worst-case push and pop.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/queue.git

library
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19,
  default-extensions:
    DeriveFunctor
    DerivingStrategies
    LambdaCase
    PatternSynonyms
    ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    Data.Deque
    Data.Queue
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
