cabal-version:   3.0

name:            queues
version:         2.0.0.0
synopsis:        Queues
description:     Queues.

category:        Data Structures
license:         BSD-3-Clause
license-file:    LICENSE
author:          Mitchell Dalvi Rosen, Travis Staton, Oleksii Divak
copyright:       Copyright (C) 2023-2024 Mitchell Dalvi Rosen, Travis Staton

maintainer:      Mitchell Dalvi Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>

extra-doc-files:
  CHANGELOG.md
  README.md


source-repository head
  type: git
  location: https://github.com/awkward-squad/queues.git


library
  build-depends:    base    >= 4.14  && < 5
                  , deepseq >= 1.4.3 && < 1.6

  exposed-modules:  Data.Deque
                    Data.Deque.Debug
                    Data.Deque.Unsafe
                    Data.Queue
                    Data.Queue.Debug
                    Data.Queue.Unsafe
                    Data.Steque
                    Data.Steque.Debug
                    Data.Steque.Unsafe

  other-modules:    Data.Deque.Internal
                    Data.List.Strict.Internal
                    Data.Queue.Internal
                    Data.Steque.Internal

  hs-source-dirs:   src

  ghc-options:      -Wall

  default-language: Haskell2010


test-suite properties
  type:             exitcode-stdio-1.0

  build-depends:    base
                  , hspec
                  , queues

  hs-source-dirs:   test

  main-is:          Main.hs

  ghc-options:      -Wall

  default-language: Haskell2010


benchmark bench
  type:             exitcode-stdio-1.0

  build-depends:    base
                  , containers
                  , queues
                  , tasty-bench

  hs-source-dirs:   bench

  main-is:          Main.hs

  ghc-options:      -Wall

  default-language: Haskell2010
